test_suite/tests/ui/struct-representation/internally-tagged-tuple.stderr
error: #[serde(tag = "...")] can only be used on enums and structs with named fields
 --> $DIR/tests/ui/struct-representation/internally-tagged-tuple.rs:5:9
  |
5 | struct S(u8, u8);
  |         ^^^^^^^^
