test_suite/tests/ui/struct-representation/internally-tagged-tuple.rs
use serde_derive::Serialize;

#[derive(Serialize)]
#[serde(tag = "type")]
struct S(u8, u8);

fn main() {}
